// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom-src-paths > bundler vite > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      rel="modulepreload"
      href="/some-static-place/vite-client.js"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script
      type="module"
      src="/some-static-place/vite-client.js"
    >
    </script>
  </body>
</html>
`;

exports[`custom-src-paths > bundler vite > build > should generate the expected files 1`] = `
{
  "index.html": SCRIPTS: [
    "/some-static-place/vite-client.js",
  ]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[0]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script
      type="module"
      src="SCRIPTS[0]"
    >
    </script>
  </body>
</html>,
  "vite-client.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vite-client.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`custom-src-paths > bundler vite > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html>
   <head>
     <script type="module">
       import { injectIntoGlobalHook } from "/@react-refresh";
 injectIntoGlobalHook(window);
 window.$RefreshReg$ = () => {};
 window.$RefreshSig$ = () => (type) => type;
     </script>
     <script
       type="module"
       src="/@vite/client"
     >
     </script>
     <meta charset="UTF-8">
     <title>
       hello-world
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       type="module"
-      src="/@id/__x00__/index.html?html-proxy&index=0.js"
+      src="/@id/__x00__/index.html?html-proxy&amp;index=0.js"
     >
     </script>
     <script
       type="module"
-      src="/@id/__x00__/index.html?html-proxy&index=1.js"
+      src="/@id/__x00__/index.html?html-proxy&amp;index=1.js"
     >
     </script>
     <link
       rel="stylesheet"
       href="/@id/__x00__virtual:ssr-css.css"
       data-ssr-css
     >
     <script type="module">
       import { createHotContext } from "/@vite/client";
               const hot = createHotContext("/__clear_ssr_css");
               hot.on("vite:afterUpdate", () => {
                 document
                   .querySelectorAll("[data-ssr-css]")
                   .forEach(node => node.remove());
               });
     </script>
   </head>
   <body>
     <div id="app">
       <div>
         Hello custom src paths
       </div>
     </div>
     <script
       type="module"
       src="{cwd}/packages/sku/dist/services/vite/entries/vite-client.js"
     >
     </script>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`custom-src-paths > bundler webpack > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/some-static-place/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/some-static-place/2.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/some-static-place/main.js"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="/some-static-place/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/some-static-place/2.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/some-static-place/main.js"
    >
    </script>
  </body>
</html>
`;

exports[`custom-src-paths > bundler webpack > build > should generate the expected files 1`] = `
{
  "2.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "2.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "index.html": SCRIPTS: [
    "/some-static-place/runtime.js",
    "/some-static-place/2.js",
    "/some-static-place/main.js",
  ]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[0]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
  </body>
</html>,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`custom-src-paths > bundler webpack > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/2.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/main.js"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello custom src paths
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/2.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/main.js"
    >
    </script>
  </body>
</html>
`;
